--- a/vista/buzon/quejas.html
+++ b/vista/buzon/quejas.html
@@ -23,7 +23,7 @@
                 <input type="radio" name="complaintType" id="nonAnonymous" value="nonAnonymous">
                 Queja No Anonima
             </label>
-
+            <div></div>
                 <div class="form_container">
                     <!-- 3 capacteres-->
                     <label for="nombre" class="form_label">Nombre:</label>
